--- a/DateWebApp01/web/CSS/estilosFormularios.css
+++ b/DateWebApp01/web/CSS/estilosFormularios.css
@@ -36,8 +36,8 @@
 
 #logo
 {
-    width: 80px;
-    height: 100%;
+    width: 250px;
+    height: 90px;
 }
 
 body
@@ -52,7 +52,6 @@ body
     margin: 20px;
     margin-left: 130px;
     margin-top: 10px;
-    border-radius: 20px;
     font-family: 'courier';
     color: white;
     font-size: 18px;
@@ -60,11 +59,12 @@ body
 }
 
 
-.izquierda img
+img
 {
-    width: 120px;
+    width: 140px;
     height: 160px;
     margin: 5px;
-    border-radius: 10px;
+    border-radius: 20px;
+    object-fit: cover;
         
 }
